--- a/MyWebsite/src/styles/main.css
+++ b/MyWebsite/src/styles/main.css
@@ -1,4 +1,6 @@
 :root{
+
+    /* Colour Definitions */
     color-scheme: light dark;
 
     --text: light-dark(#0A100D, #DEEFF8);
@@ -6,4 +8,22 @@
     --accent-primary: light-dark(#00A6A6, #002929);
     --accent-secondary: light-dark(#002929, #00A6A6);
     --highlight: #D11080;
+
+    /* Page Colours */
+    background-color: var(--background);
+    color: var(--text);
+
+    /* Page Text */
+    font-family: Tahoma, Arial, Helvetica, sans-serif;
+    font-size: medium;
+}
+
+/* Buttons */
+input[type="button"]{
+    background-color: var(--accent-primary);
+    color: var(--text);
+
+    font-size: large;
+
+    border: .2em solid var(--accent-secondary);
 }
