--- a/MyWebsite/src/styles/Header.css
+++ b/MyWebsite/src/styles/Header.css
@@ -1,3 +1,17 @@
+#header header{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    padding-bottom: 1em;
+    border-bottom: 1em solid var(--accent-primary);
+}
+
+#header header h1{
+    margin: 0em;
+    margin-right: 2em;
+}
+
 #header nav .nav{
     background-color: var(--accent-primary);
     color: var(--text);
@@ -7,4 +21,5 @@
 
     padding: .1em;
     border: .2em solid var(--accent-secondary);
+    margin-left: .75em;
 }
