--- a/MyWebsite/src/styles/Header.css
+++ b/MyWebsite/src/styles/Header.css
@@ -12,14 +12,6 @@
     margin-right: 2em;
 }
 
-#header nav .nav{
-    background-color: var(--accent-primary);
-    color: var(--text);
-
-    font-size: large;
-    text-decoration: none;
-
-    padding: .1em;
-    border: .2em solid var(--accent-secondary);
+#header nav > *{
     margin-left: .75em;
 }
