Highlight colour is no longer a visual assault :)

--- a/MyWebsite/src/styles/main.css
+++ b/MyWebsite/src/styles/main.css
@@ -7,7 +7,7 @@
     --background: light-dark(#DEEFF8, #0A100D);
     --accent-primary: light-dark(#00A6A6, #002929);
     --accent-secondary: light-dark(#002929, #00A6A6);
-    --highlight: #D11080;
+    --highlight: #00A344;
 
     /* Page Colours */
     background-color: var(--background);
