--- a/MyWebsite/src/styles/AboutMe.css
+++ b/MyWebsite/src/styles/AboutMe.css
@@ -3,6 +3,10 @@
     flex-direction: row;
 }
 
+#about_me #captioned_picture{
+    max-width: 50vw;
+}
+
 #about_me div{
-    max-width: 60vw;
+    max-width: 60%;
 }
