--- a/MyWebsite/src/styles/MyCV.css
+++ b/MyWebsite/src/styles/MyCV.css
@@ -4,7 +4,8 @@
     grid-template-rows: 33fr 34fr 33fr;
 
     /* Adjustment for small screens */
-    @media (max-width: 55em){
+    @media (max-width: 55em)
+    {
         display: flex;
         flex-direction: column;
     }
@@ -48,7 +49,35 @@
     width: 80%;
 
     /* Adjustment for small screens */
-    @media (max-width: 55em){
+    @media (max-width: 55em)
+    {
         width: 50%;
     }
+}
+
+#my_cv section .education_interval{
+    display: grid;
+    grid-template-columns: 25fr 75fr;
+    gap: .2em;
+
+    margin-top: 1em;
+
+    /* Adjustment for small screens */
+    @media (max-width: 55em)
+    {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+#my_cv section .education_interval h3{
+    grid-row: span 2;
+
+    min-width: 10rem;
+    
+    margin: 0em;
+}
+
+#my_cv section .education_interval span{
+    grid-column-start: 2;
 }
