--- a/MyWebsite/src/styles/FormTextInput.css
+++ b/MyWebsite/src/styles/FormTextInput.css
@@ -2,6 +2,25 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
 
+/* Styles for inputs */
+#form_text_input.textinput{
     width: 20em;
+}
+
+#form_text_input input{
+    width: 10rem;
+}
+
+/* Styles for areas */
+#form_text_input.textarea{
+    width: 40em;
+}
+
+#form_text_input textarea{
+    resize: vertical;
+
+    width: 30rem;
+    height: 5rem;
 }
