Remove css default padding on form text elements

--- a/MyWebsite/src/styles/main.css
+++ b/MyWebsite/src/styles/main.css
@@ -32,6 +32,9 @@ p, form, ul, ol, dl{
 }
 
 input, textarea{
-    font-size: small;
     font-family: Tahoma, Arial, Helvetica, sans-serif;
+    font-size: medium;
+
+    padding: 0em;
+    margin: 0em;
 }
