--- a/MyWebsite/src/styles/FormTextInput.css
+++ b/MyWebsite/src/styles/FormTextInput.css
@@ -2,6 +2,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+
+    margin-bottom: .4em;
+}
+
+#form_text_input :focus{
+    outline: none;
 }
 
 /* Styles for inputs */
@@ -10,17 +16,46 @@
 }
 
 #form_text_input input{
+    background-color: var(--background);
+    color: var(--text);
+
     width: 10rem;
+
+    border: none;
+    border-right: .3em solid transparent;         /* Needed to align left edge with text-areas */
+    border-bottom: .3em solid var(--accent-primary);
 }
 
 /* Styles for areas */
 #form_text_input.textarea{
     width: 40em;
+
+    /* Adjustment for small screens */
+    @media (max-width: 55em)
+    {
+        flex-direction: column;
+        align-items: left;
+    }
 }
 
 #form_text_input textarea{
     resize: vertical;
 
+    background-color: var(--background);
+    color: var(--text);
+
     width: 30rem;
+    max-width: 75vw;
     height: 5rem;
+
+    border: none;
+    border-right: .3em solid var(--accent-primary);
+    border-bottom: .3em solid var(--accent-primary);
+    
+    /* Adjustment for small screens */
+    @media (max-width: 55em)
+    {
+        margin-top: .4em;
+        margin-bottom: .4em;
+    }
 }
