italics style-by-class

--- a/MyWebsite/src/styles/main.css
+++ b/MyWebsite/src/styles/main.css
@@ -22,6 +22,10 @@
     display: none;
 }
 
+.italics{
+    font-style: italic;
+}
+
 /* Override CSS Defaults */
 h1, h2, h3, h4, h5, h6{
     margin: 0rem;
