Explicitly define line height

--- a/MyWebsite/src/styles/main.css
+++ b/MyWebsite/src/styles/main.css
@@ -15,6 +15,7 @@
     /* Page Text */
     font-family: Tahoma, Arial, Helvetica, sans-serif;
     font-size: medium;
+    line-height: 1.3em;
 }
 
 /* Style-By-Class */
