--- a/MyWebsite/src/styles/ContactMe.css
+++ b/MyWebsite/src/styles/ContactMe.css
@@ -1,4 +1,10 @@
 #contact_me{
+    display: flex;
+    flex-direction: column;
+
+    width: 40em;
+    max-width: 100vw;
+
     margin: 1em;
 }
 
@@ -9,4 +15,27 @@
     {
         text-align: center;
     }
+}
+
+#contact_me section{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#contact_me section h3{
+    font-size: medium;
+    font-weight: normal;
+
+    padding-top: 1em;
+    padding-bottom: .5em;
+}
+
+#contact_me section a{
+    display: grid;
+    grid-template-columns: 15fr 85fr;
+
+    width: 15em;
+
+    padding: .25em 0em 0em 1em;
 }
