--- a/MyWebsite/src/styles/FormTextInput.css
+++ b/MyWebsite/src/styles/FormTextInput.css
@@ -18,6 +18,13 @@
 /* Styles for inputs */
 #form_text_input.textinput{
     width: 40em;
+    
+    /* Adjustment for small screens */
+    @media (max-width: 55em)
+    {
+        flex-direction: column;
+        align-items: left;
+    }
 }
 
 #form_text_input input{
@@ -29,6 +36,17 @@
     border: none;
     border-right: .3em solid transparent;               /* Needed to align left edge with text-areas */
     border-bottom: .3em solid var(--accent-primary);
+
+    
+
+    /* Adjustment for small screens */
+    @media (max-width: 55em)
+    {
+        max-width: 85vw;
+        
+        margin-top: .4em;
+        margin-bottom: .4em;
+    }
 }
 
 /* Styles for areas */
@@ -60,6 +78,8 @@
     /* Adjustment for small screens */
     @media (max-width: 55em)
     {
+        max-width: 85vw;
+
         margin-top: .4em;
         margin-bottom: .4em;
     }
