Explicitly left-align popup text

--- a/MyWebsite/src/styles/Popup.css
+++ b/MyWebsite/src/styles/Popup.css
@@ -4,6 +4,7 @@
     right: 0;
 
     background-color: var(--accent-primary);
+    text-align: left;
     font-size: large;
 
     border: .25em solid var(--accent-secondary);
