Tidy up thumbnail in cases where there is no additional content

--- a/MyWebsite/src/styles/ProjectCard.css
+++ b/MyWebsite/src/styles/ProjectCard.css
@@ -22,7 +22,7 @@
     overflow-y: hidden;
 }
 
-#project_card span:hover{
+#project_card span.dohover:hover{
     cursor: pointer;
     font-style: italic;
 }
