Make window popups wider on mobile

--- a/MyWebsite/src/styles/Popup.css
+++ b/MyWebsite/src/styles/Popup.css
@@ -21,6 +21,13 @@
     max-width: 40vw;
 
     padding: 1.5em .5em .5em .5em;
+
+    /* Adjustment for small screens */
+    @media (max-width: 55em)
+    {
+        left: 5vw;
+        max-width: 90vw;
+    }
 }
 
 #popup.visible.alert{
