--- a/MyWebsite/src/styles/Projects.css
+++ b/MyWebsite/src/styles/Projects.css
@@ -4,3 +4,14 @@
     flex-wrap: wrap;
     justify-content: space-around;
 }
+
+#projects .gallery{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#projects .gallery img{
+    width: 30%;
+}
