Make Popups scrollable and add more images for map generator gallery

--- a/MyWebsite/src/styles/Popup.css
+++ b/MyWebsite/src/styles/Popup.css
@@ -22,6 +22,8 @@
 
     padding: 1.5em .5em .5em .5em;
 
+    overflow-y: scroll;
+
     /* Adjustment for small screens */
     @media (max-width: 55em)
     {
