--- a/MyWebsite/src/styles/MyCV.css
+++ b/MyWebsite/src/styles/MyCV.css
@@ -1,4 +1,22 @@
 #my_cv{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#my_cv div:first-child{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    
+    width: 100%;
+}
+
+#my_cv div:first-child > *{
+    margin: 1rem 1rem 0rem 1rem;
+}
+
+#my_cv > div:last-child{
     display: grid;
     grid-template-columns: 50fr 50fr;
 
@@ -23,4 +41,15 @@
     grid-template-columns: 50fr 50fr;
     list-style-type: none;
     padding: 0em;
+}
+
+#my_cv a{
+    background-color: var(--accent-primary);
+    
+    padding: .5em;
+    border: .5em solid var(--accent-secondary);
+}
+
+#my_cv a:hover{
+    font-style: normal;
 }
