--- a/MyWebsite/src/styles/ContactMe.css
+++ b/MyWebsite/src/styles/ContactMe.css
@@ -2,39 +2,45 @@
     display: flex;
     flex-direction: column;
 
-    width: 40em;
+    width: 70em;
     max-width: 100vw;
 
     margin: 1em;
 }
 
-#contact_me h2{
-    
-    /* Adjustment for small screens */
-    @media (max-width: 35em)
+#contact_me > div{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    /*Adjustment for small screens*/
+    @media(max-width: 65em)
     {
-        text-align: center;
+        flex-direction: column;
     }
 }
 
 #contact_me section{
+    align-self: center;
+
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-}
 
-#contact_me section h3{
-    font-size: medium;
-    font-weight: normal;
+    min-width: 20em;
 
-    padding-top: 1em;
-    padding-bottom: .5em;
+    margin: 0em 2.5em 1.5em 0em;
+
+    /*Adjustment for small screens*/
+    @media(max-width: 65em)
+    {
+        margin: 1em 0em 0em 0em;
+    }
 }
 
 #contact_me section a{
     max-width: 15em;
 
-    margin: .25em 0em 0em 1em;
+    margin-top: .25em;
 }
 
 #contact_me section span{
