--- a/MyWebsite/src/styles/Header.css
+++ b/MyWebsite/src/styles/Header.css
@@ -1,3 +1,10 @@
+#header{
+    position: sticky;
+    top: 0;
+
+    background-color: var(--background);
+}
+
 #header header{
     display: flex;
     flex-direction: row;
