--- a/MyWebsite/src/styles/Layout.css
+++ b/MyWebsite/src/styles/Layout.css
@@ -1,5 +1,5 @@
 #layout{
     border-left: 1em solid var(--accent-primary);
     border-bottom: 1em solid var(--accent-primary);
-    margin: 2em 0em 0em 0em;
+    margin: 0em;
 }
