--- a/MyWebsite/src/styles/Projects.css
+++ b/MyWebsite/src/styles/Projects.css
@@ -27,3 +27,15 @@
 #projects #image_gallery{
     text-align: center;
 }
+
+#projects .card_content{
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+
+    background-color: var(--background);
+    color: var(--text);
+}
